--- a/MOBILE/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MOBILE/MyApplication/app/src/main/AndroidManifest.xml
@@ -11,14 +11,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login.Login">
+        <activity android:name=".login.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login.Register"/>
+        <activity android:name=".login.Register"/>
+        <activity android:name=".desktop.Desktop"/>
 
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
