--- a/MOBILE/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MOBILE/MyApplication/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
         <activity android:name=".login.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +21,8 @@
         </activity>
         <activity android:name=".login.Register"/>
         <activity android:name=".desktop.Desktop"/>
-
+        <activity android:name=".group.NewGroup" />
+        <activity android:name=".user.EditUser"/>
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
