--- a/MOBILE/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MOBILE/MyApplication/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".desktop.Desktop"/>
         <activity android:name=".group.NewGroup" />
         <activity android:name=".user.EditUser"/>
+        <activity android:name=".note.AddNote"/>
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
