--- a/MOBILE/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MOBILE/MyApplication/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".note.AddNote"/>
         <activity android:name=".note.DisplayNote"/>
         <activity android:name=".note.EditNote"/>
+        <activity android:name=".group.SearchGroup"/>
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
